# monitoring-data-warehouse

./: .gitignore  LICENSE  PUBLISHING.md  README.md  publish.ps1  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
data/: station_attribute_history.csv  station_readings.csv
docs/: architecture.md  demo-storyboard.md  model-catalog.md  model-notes.md  postgresql-migration-strategy.md  schema-diagram.md
metadata/: warehouse_models.yml
sql/: schema.sql  transforms.sql
src/monitoring_data_warehouse/: builder.py
tests/: test_builder.py
