[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monitoring-data-warehouse"
version = "0.1.0"
description = "Warehouse-style modeling and validation for monitoring data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.1,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]